Update checkout step to take ref

--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,7 @@ inputs:
   disableSSL:
     required: true
     description: 'Disable SSL verification'
-    default: false
+    default: true
   username:
     required: true
     description: 'The username of the user repository'
